@@ -26,6 +26,8 @@ extern int langops_init (void);
 extern int langops_shutdown (void);
 
 extern void langops_getdescriptor (struct TAG_tnode *node, char **str);
+extern int langops_isconst (struct TAG_tnode *node);
+extern int langops_constvalof (struct TAG_tnode *node, void *ptr);
 
 
 #endif	/* !__LANGOPS_H */
