@@ -41,7 +41,6 @@
 #include "lexer.h"
 #include "lexpriv.h"
 #include "parser.h"
-#include "occampi.h"
 
 /*}}}*/
 
