@@ -1,0 +1,22 @@
+;
+;	tests/test_n20.etc
+;	compiled from tests/test_n20.occ
+;	on host frog at Mon Oct  3 03:33:01 2005
+;	source language: occam-pi, target: etc-kroc-unknown
+;
+
+.jentry	O_test_n20
+.descriptor	"PROC O_test_n20 (CHAN BYTE screen)"
+; PROC test.n20 = 8,8,0,0,8
+.setws	8, 8
+.setvs	0
+.setms	0
+.setnamedlabel	"O_test_n20"
+.setlabel	1
+	ajw	0
+	ajw	0
+	ret	8
+
+;
+;	end of compilation
+;
